works no, freemarker is strange with null values